tests/reference/run-array_07-de10142.stderr
semantic error: Empty array constructor is not allowed
 --> tests/errors/array_07.f90:5:5
  |
5 | a = []
  |     ^^ 
